changed environment, should be final now

--- a/credentials/.env
+++ b/credentials/.env
@@ -1,1 +1,5 @@
-API_KEY = "65636731-2f7b-4a1c-9342-236647250e5f"
+API_KEY = "8735e3d470f44dc6abca0e456bc197d5"
+MONGO_DB_USERNAME = parker
+MONGO_DB_PASSWORD = cmsc335password
+MONGO_DB_NAME = "CMSC335Final"
+MONGO_COLLECTION = "wmata"
